force-app/main/default/objects/GameCharacterItem__c/GameCharacterItem__c.object-meta.xml
<CustomObject>
    <label>Game Character Item</label>
    <nameField>
        <displayFormat>GCI-{000000}</displayFormat>
        <label>Game Character Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Game Character Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>