force-app/main/default/objects/GameCharacterItem__c/fields/Equipped__c.field-meta.xml
<CustomField>
    <fullName>Equipped__c</fullName>
    <label>Equipped</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>ItemEquippedOptions</valueSetName>
    </valueSet>
</CustomField>