force-app/main/default/objects/GameCharacterItem__c/fields/GameCharacter__c.field-meta.xml
<CustomField>
    <fullName>GameCharacter__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Game Character</label>
    <referenceTo>GameCharacter__c</referenceTo>
    <relationshipLabel>Game Character Items</relationshipLabel>
    <relationshipName>GameCharacterItems</relationshipName>
    <type>Lookup</type>
</CustomField>